// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminHomePageComponent should snap with default view 1`] = `
<tm-admin-home-page
  accountService={[Function AccountService]}
  activeRequests="0"
  courseService={[Function CourseService]}
  existingAccountRequestIndex="0"
  existingAccountRequestModal={[Function TemplateRef_]}
  instructorDetails=""
  instructorEmail=""
  instructorInstitution=""
  instructorName=""
  instructorsConsolidated={[Function Array]}
  isAddingInstructors="false"
  isExistingAccountRequestModalLoading="false"
  linkService={[Function LinkService]}
  registeredInstructorAccountData={[Function Array]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding Multiple Instructors
        </strong>
        <p
          class="text-muted"
        >
          <i
            class="fas fa-exclamation-circle"
          />
           Add Instructor Details in the format: Name | Email | Institution 
        </p>
        <textarea
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-details-single-line"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor-single-line"
        >
          Add Instructors
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding a Single Instructor
        </strong>
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Name:
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-name"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Email: 
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-email"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Institution: 
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-institution"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor"
        >
          Add Instructor
        </button>
      </div>
    </div>
  </div>
</tm-admin-home-page>
`;

exports[`AdminHomePageComponent should snap with disabled adding instructor button if there are active requests 1`] = `
<tm-admin-home-page
  accountService={[Function AccountService]}
  activeRequests={[Function Number]}
  courseService={[Function CourseService]}
  existingAccountRequestIndex="0"
  existingAccountRequestModal={[Function TemplateRef_]}
  instructorDetails=""
  instructorEmail=""
  instructorInstitution=""
  instructorName=""
  instructorsConsolidated={[Function Array]}
  isAddingInstructors={[Function Boolean]}
  isExistingAccountRequestModalLoading="false"
  linkService={[Function LinkService]}
  registeredInstructorAccountData={[Function Array]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding Multiple Instructors
        </strong>
        <p
          class="text-muted"
        >
          <i
            class="fas fa-exclamation-circle"
          />
           Add Instructor Details in the format: Name | Email | Institution 
        </p>
        <textarea
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-details-single-line"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor-single-line"
        >
          Add Instructors
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding a Single Instructor
        </strong>
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Name:
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-name"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Email: 
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-email"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Institution: 
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-institution"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor"
        >
          Add Instructor
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Result
      </strong>
    </div>
    <div
      class="card-body"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-striped table-hover"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Email
              </th>
              <th>
                Institution
              </th>
              <th>
                Action
              </th>
              <th>
                Status
              </th>
              <th>
                Message
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              tm-new-instructor-data-row=""
            >
              <td>
                <span
                  id="instructor-0-name"
                >
                  Instructor A
                </span>
              </td>
              <td>
                <span
                  id="instructor-0-email"
                >
                  instructora@example.com
                </span>
              </td>
              <td>
                <span
                  id="instructor-0-institution"
                >
                  Sample Institution A
                </span>
              </td>
              <td
                style="width: 17%;"
              >
              </td>
              <td
                style="width: 8%;"
              >
                ADDING
              </td>
              <td
                style="width: 40%;"
              >
              </td>
            </tr>
            <tr
              tm-new-instructor-data-row=""
            >
              <td>
                <span
                  id="instructor-1-name"
                >
                  Instructor B
                </span>
              </td>
              <td>
                <span
                  id="instructor-1-email"
                >
                  instructorb@example.com
                </span>
              </td>
              <td>
                <span
                  id="instructor-1-institution"
                >
                  Sample Institution B
                </span>
              </td>
              <td
                style="width: 17%;"
              >
                <div
                  class="button-group"
                >
                  <button
                    class="action-btn btn btn-sm btn-primary text-nowrap"
                    disabled=""
                    id="add-instructor-1"
                    style="margin-right: 10px;"
                  >
                    Add
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-info text-nowrap"
                    id="edit-instructor-1"
                    style="margin-right: 10px;"
                  >
                    Edit
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-danger"
                    id="remove-instructor-1"
                  >
                    Remove
                  </button>
                </div>
              </td>
              <td
                style="width: 8%;"
              >
                PENDING
              </td>
              <td
                style="width: 40%;"
              >
              </td>
            </tr>
          </tbody>
        </table>
        <button
          class="btn btn-primary top-padded"
          disabled=""
          id="add-all-instructors"
        >
          <tm-ajax-loading>
            <div
              class="loading-container"
            >
              <div
                class="spinner-border spinner-border-sm align-middle text-white"
                role="status"
              />
            </div>
          </tm-ajax-loading>
           Add All Instructors 
        </button>
      </div>
    </div>
  </div>
</tm-admin-home-page>
`;

exports[`AdminHomePageComponent should snap with some instructors details 1`] = `
<tm-admin-home-page
  accountService={[Function AccountService]}
  activeRequests="0"
  courseService={[Function CourseService]}
  existingAccountRequestIndex="0"
  existingAccountRequestModal={[Function TemplateRef_]}
  instructorDetails=""
  instructorEmail=""
  instructorInstitution=""
  instructorName=""
  instructorsConsolidated={[Function Array]}
  isAddingInstructors="false"
  isExistingAccountRequestModalLoading="false"
  linkService={[Function LinkService]}
  registeredInstructorAccountData={[Function Array]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding Multiple Instructors
        </strong>
        <p
          class="text-muted"
        >
          <i
            class="fas fa-exclamation-circle"
          />
           Add Instructor Details in the format: Name | Email | Institution 
        </p>
        <textarea
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-details-single-line"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor-single-line"
        >
          Add Instructors
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-body"
    >
      <div>
        <strong>
          Adding a Single Instructor
        </strong>
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Name:
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-name"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Email: 
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-email"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <strong>
          Institution: 
        </strong>
        <input
          class="form-control ng-untouched ng-pristine ng-valid"
          id="instructor-institution"
          type="text"
        />
      </div>
      <div
        class="top-padded"
      >
        <button
          class="btn btn-primary"
          id="add-instructor"
        >
          Add Instructor
        </button>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Result
      </strong>
    </div>
    <div
      class="card-body"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-striped table-hover"
        >
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Email
              </th>
              <th>
                Institution
              </th>
              <th>
                Action
              </th>
              <th>
                Status
              </th>
              <th>
                Message
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              tm-new-instructor-data-row=""
            >
              <td>
                <span
                  id="instructor-0-name"
                >
                  Instructor A
                </span>
              </td>
              <td>
                <span
                  id="instructor-0-email"
                >
                  instructora@example.com
                </span>
              </td>
              <td>
                <span
                  id="instructor-0-institution"
                >
                  Sample Institution A
                </span>
              </td>
              <td
                style="width: 17%;"
              >
                <div
                  class="button-group"
                >
                  <button
                    class="action-btn btn btn-sm btn-primary text-nowrap"
                    id="add-instructor-0"
                    style="margin-right: 10px;"
                  >
                    Add
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-info text-nowrap"
                    id="edit-instructor-0"
                    style="margin-right: 10px;"
                  >
                    Edit
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-danger"
                    id="remove-instructor-0"
                  >
                    Remove
                  </button>
                </div>
              </td>
              <td
                style="width: 8%;"
              >
                PENDING
              </td>
              <td
                style="width: 40%;"
              >
              </td>
            </tr>
            <tr
              tm-new-instructor-data-row=""
            >
              <td>
                <span
                  id="instructor-1-name"
                >
                  Instructor B
                </span>
              </td>
              <td>
                <span
                  id="instructor-1-email"
                >
                  instructorb@example.com
                </span>
              </td>
              <td>
                <span
                  id="instructor-1-institution"
                >
                  Sample Institution B
                </span>
              </td>
              <td
                style="width: 17%;"
              >
              </td>
              <td
                style="width: 8%;"
              >
                SUCCESS
              </td>
              <td
                style="width: 40%;"
              >
                <span
                  id="message-instructor-1"
                >
                   Instructor "Instructor B" has been successfully created. [
                  <a
                    href="http://localhost:4200/web/join"
                  >
                    join link
                  </a>
                  ] 
                </span>
              </td>
            </tr>
            <tr
              tm-new-instructor-data-row=""
            >
              <td>
                <span
                  id="instructor-2-name"
                >
                  Instructor C
                </span>
              </td>
              <td>
                <span
                  id="instructor-2-email"
                >
                  instructorc@example.com
                </span>
              </td>
              <td>
                <span
                  id="instructor-2-institution"
                >
                  Sample Institution C
                </span>
              </td>
              <td
                style="width: 17%;"
              >
                <div
                  class="button-group"
                >
                  <button
                    class="action-btn btn btn-sm btn-primary text-nowrap"
                    id="add-instructor-2"
                    style="margin-right: 10px;"
                  >
                    Add
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-info text-nowrap"
                    id="edit-instructor-2"
                    style="margin-right: 10px;"
                  >
                    Edit
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-danger"
                    id="remove-instructor-2"
                  >
                    Remove
                  </button>
                </div>
              </td>
              <td
                style="width: 8%;"
              >
                FAIL
              </td>
              <td
                style="width: 40%;"
              >
                <span
                  class="message"
                  id="message-instructor-2"
                >
                  The instructor cannot be added for some reason
                </span>
              </td>
            </tr>
            <tr
              tm-new-instructor-data-row=""
            >
              <td>
                <span
                  id="instructor-3-name"
                >
                  Instructor D
                </span>
              </td>
              <td>
                <span
                  id="instructor-3-email"
                >
                  instructord@example.com
                </span>
              </td>
              <td>
                <span
                  id="instructor-3-institution"
                >
                  Sample Institution C
                </span>
              </td>
              <td
                style="width: 17%;"
              >
                <div
                  class="button-group"
                >
                  <button
                    class="action-btn btn btn-sm btn-primary text-nowrap"
                    id="add-instructor-3"
                    style="margin-right: 10px;"
                  >
                    Add
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-info text-nowrap"
                    id="edit-instructor-3"
                    style="margin-right: 10px;"
                  >
                    Edit
                  </button>
                  <button
                    class="action-btn btn btn-sm btn-danger"
                    id="remove-instructor-3"
                  >
                    Remove
                  </button>
                </div>
              </td>
              <td
                style="width: 8%;"
              >
                FAIL
              </td>
              <td
                style="width: 40%;"
              >
                <span
                  class="message"
                  id="message-instructor-3"
                >
                  Cannot create account request as instructor has already registered.
                </span>
                <span>
                  <a
                    class="btn btn-link"
                    id="existing-account-request-info-button-3"
                    type="button"
                  >
                    <i
                      class="fas fa-info-circle"
                    />
                  </a>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
        <button
          class="btn btn-primary top-padded"
          id="add-all-instructors"
        >
           Add All Instructors 
        </button>
      </div>
    </div>
  </div>
</tm-admin-home-page>
`;
